--- a/AppBolivar/Src/Laboratorio Maestro.fx.yaml
+++ b/AppBolivar/Src/Laboratorio Maestro.fx.yaml
@@ -297,28 +297,6 @@
         Y: =194
         ZIndex: =13
 
-    Group2_6 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =13
-
-        Rectangle3_9 As rectangle:
-            Fill: =RGBA(255, 255, 255, 1)
-            Height: =96
-            Width: =1366
-            ZIndex: =27
-
-        Image11_5 As image:
-            Height: =80
-            Image: =getLogo
-            OnSelect: =Navigate(Home)
-            Width: =119
-            X: =30
-            Y: =8
-            ZIndex: =29
-
     TextInput4_19 As text:
         BorderColor: =RGBA(0, 0, 0, 1)
         Default: =""
@@ -734,6 +712,12 @@
         X: =96
         Y: =589
         ZIndex: =26
+
+    Rectangle3_9 As rectangle:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =96
+        Width: =1366
+        ZIndex: =27
 
     Circle4_2 As circle:
         Fill: |-
@@ -3615,4 +3599,12 @@
         X: =542
         Y: =532
         ZIndex: =135
+
+    Image48_13 As image:
+        Height: =80
+        Image: ='imagen (1)'
+        Width: =119
+        X: =30
+        Y: =8
+        ZIndex: =136
 
