--- a/AppBolivar/Src/Medicamentos Maestro.fx.yaml
+++ b/AppBolivar/Src/Medicamentos Maestro.fx.yaml
@@ -195,28 +195,6 @@
         Y: =276
         ZIndex: =13
 
-    Group2_1 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =13
-
-        Rectangle3_4 As rectangle:
-            Fill: =RGBA(255, 255, 255, 1)
-            Height: =96
-            Width: =1366
-            ZIndex: =18
-
-        Image11_2 As image:
-            Height: =80
-            Image: =getLogo
-            OnSelect: =Navigate(Home)
-            Width: =119
-            X: =30
-            Y: =8
-            ZIndex: =20
-
     Label6_6 As label:
         Font: =Font.'Segoe UI'
         FontWeight: =FontWeight.Semibold
@@ -455,6 +433,12 @@
         X: =722
         Y: =276
         ZIndex: =17
+
+    Rectangle3_4 As rectangle:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =96
+        Width: =1366
+        ZIndex: =18
 
     Circle4_3 As circle:
         Fill: |-
@@ -2433,6 +2417,14 @@
                 X: =30
                 Y: =Button5.Y +Button5.Height +16
                 ZIndex: =26
+
+    Image48_14 As image:
+        Height: =80
+        Image: ='imagen (1)'
+        Width: =119
+        X: =30
+        Y: =8
+        ZIndex: =107
 
     GroupChecklistVerificación_5 As group:
         Height: =5
