--- a/AppBolivar/Src/Test_Maestro.fx.yaml
+++ b/AppBolivar/Src/Test_Maestro.fx.yaml
@@ -17,28 +17,6 @@ Test_Maestro As screen:
         Y: =192
         ZIndex: =1
 
-    Group2_10 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =1
-
-        Rectangle3_7 As rectangle:
-            Fill: =RGBA(255, 255, 255, 1)
-            Height: =96
-            Width: =1366
-            ZIndex: =23
-
-        Image11_8 As image:
-            Height: =80
-            Image: =getLogo
-            OnSelect: =Navigate(Home)
-            Width: =119
-            X: =30
-            Y: =8
-            ZIndex: =24
-
     TextInput4_30 As text:
         BorderColor: =RGBA(0, 0, 0, 1)
         Default: =""
@@ -736,6 +714,12 @@ Test_Maestro As screen:
         Width: =1366
         Y: =96
         ZIndex: =22
+
+    Rectangle3_7 As rectangle:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =96
+        Width: =1366
+        ZIndex: =23
 
     Image12_36 As image:
         Height: =80
@@ -4355,4 +4339,12 @@ Test_Maestro As screen:
             X: =156
             Y: =122
             ZIndex: =3
+
+    Image48_16 As image:
+        Height: =80
+        Image: ='imagen (1)'
+        Width: =119
+        X: =30
+        Y: =8
+        ZIndex: =121
 
