--- a/AppBolivar/Src/Tratamiento Maestro.fx.yaml
+++ b/AppBolivar/Src/Tratamiento Maestro.fx.yaml
@@ -323,28 +323,6 @@
         Y: =314
         ZIndex: =13
 
-    Group2_2 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =13
-
-        Rectangle3_5 As rectangle:
-            Fill: =RGBA(255, 255, 255, 1)
-            Height: =96
-            Width: =1366
-            ZIndex: =15
-
-        Image11_6 As image:
-            Height: =80
-            Image: =getLogo
-            OnSelect: =Navigate(Home)
-            Width: =119
-            X: =30
-            Y: =8
-            ZIndex: =17
-
     dpEspecialidad_11 As dropdown:
         BorderStyle: =BorderStyle.None
         ChevronBackground: =RGBA(255, 255, 255, 1)
@@ -363,6 +341,12 @@
         X: =65
         Y: =404
         ZIndex: =14
+
+    Rectangle3_5 As rectangle:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =96
+        Width: =1366
+        ZIndex: =15
 
     Circle4_4 As circle:
         Fill: |-
@@ -4988,4 +4972,12 @@
             X: =156
             Y: =122
             ZIndex: =3
+
+    Image48_15 As image:
+        Height: =80
+        Image: ='imagen (1)'
+        Width: =119
+        X: =30
+        Y: =8
+        ZIndex: =169
 
