--- a/AppBolivar/Src/Triaje_Dashboard.fx.yaml
+++ b/AppBolivar/Src/Triaje_Dashboard.fx.yaml
@@ -18,20 +18,6 @@ Triaje_Dashboard As screen:
         Width: =1366
         ZIndex: =2
 
-    img_Logo_Dashboard__Triaje As image:
-        AccessibleLabel: ="Logo"
-        Height: =80
-        Image: =getLogo
-        OnSelect: =Navigate(Home)
-        RadiusBottomLeft: =50
-        RadiusBottomRight: =50
-        RadiusTopLeft: =50
-        RadiusTopRight: =50
-        Width: =119
-        X: =30
-        Y: =8
-        ZIndex: =3
-
     btn_Emergencia_Dashboard__Triaje As button:
         BorderColor: =RGBA(0, 0, 0, 1)
         Fill: =RGBA(232, 17, 17, 1)
@@ -862,4 +848,12 @@ Triaje_Dashboard As screen:
         X: =1303
         Y: =178
         ZIndex: =34
+
+    Image48_7 As image:
+        Height: =80
+        Image: ='imagen (1)'
+        Width: =119
+        X: =30
+        Y: =8
+        ZIndex: =35
 
